--- a/books/Dockerfile
+++ b/books/Dockerfile
@@ -4,13 +4,17 @@ FROM python:3.11-slim
 # Set the working directory in the container
 WORKDIR /usr/src/app
 
-# Copy the current directory contents into the container at /usr/src/app
-COPY . .
+# Copy the requirements file into the container
+COPY requirements.txt .
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Make port 8000 available to the world outside this container
-EXPOSE 8000
+# Copy the rest of the application code into the container
+COPY . .
 
+# Make port 5001 available to the world outside this container
+EXPOSE 5001
+
+# Run the application
 CMD ["python", "main.py"]
