--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - "5002:5002"
     environment:
       - MONGO_URL=mongodb://mongo:27017/loansdb
+      - BOOKS_SERVICE_URL=http://books:5001
     depends_on:
       - mongo
     restart: always
@@ -37,6 +38,7 @@ services:
       - "5003:5002"
     environment:
       - MONGO_URL=mongodb://mongo:27017/loansdb
+      - BOOKS_SERVICE_URL=http://books:5001
     depends_on:
       - mongo
     restart: always
