--- a/nginx/nginx-load-balancer.conf
+++ b/nginx/nginx-load-balancer.conf
@@ -1,7 +1,7 @@
 http {
     upstream loans {
-        server loan1:5002 weight=3;
-        server loan2:5002 weight=1;
+        server loans1:5002 weight=3;
+        server loans2:5002 weight=1;
     }
 
     server {
