--- a/loans/Dockerfile
+++ b/loans/Dockerfile
@@ -7,6 +7,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+# Set the PYTHONPATH environment variable
+ENV PYTHONPATH="/usr/src/app"
+
 EXPOSE 5002
 
 CMD ["python", "main.py"]
