Fixed docker-compose.yml, nginx config file and ratings.py issue

--- a/nginx/nginx-load-balancer.conf
+++ b/nginx/nginx-load-balancer.conf
@@ -20,7 +20,7 @@
             }
         }
 
-        location /ratings/ {
+        location ~ ^/ratings/[^/]+/values {
             proxy_pass http://books:5001;
             limit_except POST {
                 deny all;
